--- a/app/views/workouts/_fields.html.haml
+++ b/app/views/workouts/_fields.html.haml
@@ -2,7 +2,7 @@
   .set_box
     .field.exercise_adder
       = exercise_set_form.collection_select :exercise_id, Exercise.all, :id, :name, {include_blank: "Select Exercise"}, {class: "exercise_selector"}
-    .field
+
       = exercise_set_form.select(:set_type, ["Resistance", "Time Interval", "Distance"],  {include_blank: "Select Set Type"}, {class: "set_type_select"})
     .reps_and_rest
       .field
@@ -13,14 +13,14 @@
         = exercise_set_form.number_field :rest_period, class: "three_digit_entry"
 
 
-    .cardio_fields
-      .field.distance
+    %div{ class: ((exercise_set_form.object.set_type == "Time Interval" || exercise_set_form.object.set_type == "Distance") ? "visible cardio_fields" : "cardio_fields")}
+      %div{ class: (exercise_set_form.object.set_type == "Distance" ? "visible field distance" : "field distance")}
         = exercise_set_form.label :distance, "Distance (m)", class: "workout_creation_label"
         =exercise_set_form.number_field :distance, class: "four_digit_entry"
-      .field.interval
-        =exercise_set_form.label :time, "Interval (s)", class: "workout_creation_label"
+      %div{ class: (exercise_set_form.object.set_type == "Time Interval" ? "visible field interval" : "field interval")}
+        =exercise_set_form.label :time, "Interval (secs)", class: "workout_creation_label"
         =exercise_set_form.number_field :time, class: "four_digit_entry"
-    .resistance_fields
+    %div{ class: (exercise_set_form.object.set_type == "Resistance" ? "visible resistance_fields" : "resistance_fields")}
       .field
         = exercise_set_form.select(:weight_required, [['Unweighted', false], ["Weighted",true]], {}, {class: "exercise_selector"})
       .field
@@ -29,7 +29,6 @@
 
 
     = exercise_set_form.link_to_remove 'Remove', class: "btn btn-danger btn-xs"
+= f.link_to_add 'Add a Set', :exercise_sets, class: "btn btn-success btn-lg full_width"
 
 
-  %br
-= f.link_to_add 'Add a Set', :exercise_sets, class: "btn btn-success btn-sm"
