--- a/app/views/workouts/edit.html.erb
+++ b/app/views/workouts/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing workout</h1>
+<h1>Edit Workout</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @workout %> |
-<%= link_to 'Back', workouts_path %>
