--- a/app/views/workouts/_form.html.haml
+++ b/app/views/workouts/_form.html.haml
@@ -21,6 +21,10 @@
         = f.label :due_date
         %br/
         = f.text_field :due_date, class: "datepicker"
+      .field
+        = f.label :instructions
+        %br/
+        =f.text_area :instructions, class: "workout_instructions"
 
 
 
