--- a/app/views/exercises/index.html.haml
+++ b/app/views/exercises/index.html.haml
@@ -8,12 +8,17 @@
     =f.submit "Search", class: "btn btn-success btn-xs"
 
 .row
-  .col_md_6
-    %ul.exercise_list
+
+  .col-md-12
+
+    %ul.workout_list.exercise_list
       - @exercises.each do |exercise|
         %li
-          = link_to 'View', exercise, class: "btn btn-primary btn-xs "
-          = exercise.name
-          = link_to 'Edit', edit_exercise_path(exercise), class: "btn btn-default btn-xs"
-          = link_to 'Delete', exercise, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs "
-    = paginate @exercises
+          %p.admin_workout_description
+            = exercise.name
+          %p
+            = exercise.description
+          .links
+            = link_to 'Edit', edit_exercise_path(exercise), class: "btn btn-default btn-xs not_corner"
+            = link_to 'Delete', exercise, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs not_corner "
+      = paginate @exercises
