--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,21 @@
-%h2 Clients
-%ul
-  - @users.each do |user|
-    %li
-      = user.full_name
-      = link_to "view profile", user_path(user)
+%h2.workout_heading Client List:
+
+=search_form_for @q, :url => url_for(:users_controller => "q", :action => "index") do |f|
+  .search_bar
+    =f.text_field :first_name_or_last_name_or_email_cont, class: "search_field"
+    =f.submit "Search", class: "btn btn-success btn-xs"
+
+.row
+  .col-md-12
+
+    %ul.user_list
+      - @users.each do |user|
+        %li
+          = link_to "#{user.full_name}", user_path(user)
+          |
+          = mail_to user.email
+
+
+
+
+    = paginate @users
