--- a/app/views/workouts/_complete_fields.html.haml
+++ b/app/views/workouts/_complete_fields.html.haml
@@ -4,7 +4,7 @@
     %h4.exercise_set_header
       = exercise_set_form.object.to_string
 
-    -if exercise_set_form.object.weight_required == true
+    -if (exercise_set_form.object.weight_required == true && exercise_set_form.object.set_type == "Resistance")
       .field.complete_form
         = exercise_set_form.label :achieved_weight, "Weight (kg):", class: "form_label"
         =exercise_set_form.number_field :achieved_weight, min: 0, step: 0.5, class: "weight_entry"
