--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -36,18 +36,17 @@
             %li
               = "Interval: #{set.time}s"
           -unless set.achieved_weight.blank?
-            %li
+            %li.achieved_weight
               = "Achieved Weight: #{set.achieved_weight}kg"
           -unless (set.suggested_weight.blank? || set.achieved_weight)
-            %li
+            %li.target_weight
               = "Target Weight: #{set.suggested_weight}kg"
 
 
           -unless set.notes.blank?
-            %li
-              Notes: &ldquo;
+            %li.notes
+              Notes:
               ="#{set.notes}"
-              &rdquo;
       -else
         %br
   .col-md-5.button_center
