--- a/app/views/exercises/show.html.haml
+++ b/app/views/exercises/show.html.haml
@@ -8,4 +8,5 @@
       = @exercise.description
   .col-md-5.button_center
     = link_to 'All Exercises', exercises_path, class: "btn btn-primary btn-lg full_width"
-    = button_to 'Edit', edit_exercise_path(@exercise), method: :get, class: "btn btn-default btn-lg full_width"
+    -if can? :manage, :all
+      = button_to 'Edit', edit_exercise_path(@exercise), method: :get, class: "btn btn-default btn-lg full_width"
