--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -7,15 +7,13 @@
 
 .row
   .col-md-12
-
-    %ul.user_list
-      - @users.each do |user|
-        %li
-          = link_to "#{user.full_name}", user_path(user)
-          |
-          = mail_to user.email
-
-
-
-
-    = paginate @users
+    -if @users.blank?
+      %p.no_records No Records
+    -else
+      %ul.user_list
+        - @users.each do |user|
+          %li
+            = link_to "#{user.full_name}", user_path(user)
+            |
+            = mail_to user.email
+      = paginate @users
