--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,44 +1,51 @@
 %h2
   = @user.full_name
 
-.row
-  .col-md-12
-    %h3 Maximums
-    %ul.maximums
-      - @grouped_exercises.each do |key, value|
-        %li.maximum
-          ="#{key}: #{value}kg"
+- if @grouped_exercises.count > 0
+  .row
+    .col-md-12
+      %h3 Maximums
+      %ul.maximums
+        - @grouped_exercises.each do |key, value|
+          %li.maximum
+            ="#{key}: #{value}kg"
 
 .row
   .col-md-6
     %h3
       Outstanding Workouts
-    %ul.workout_list
-      -@outstanding_workouts.each do |workout|
-        %li{ class: (workout.due_date < Date.today ? "overdue" : "due")}
-          %p.admin_workout_description
-            =workout.description
-          %p
-            = list_exercises(workout)
-          %p.completion
-            - if workout.due_date < Date.today
-              = "Overdue: #{workout.due_date.to_formatted_s(:long_ordinal)}"
-            -else
-              = "Due: #{workout.due_date.to_formatted_s(:long_ordinal)}"
-          = link_to "View", workout_path(workout), class: "btn btn-primary btn-xs "
-    = paginate @outstanding_workouts, param_name: 'page_2'
+    -if @outstanding_workouts.blank?
+      %p.no_records No Records
+    -else
+      %ul.workout_list
+        -@outstanding_workouts.each do |workout|
+          %li{ class: (workout.due_date < Date.today ? "overdue" : "due")}
+            %p.admin_workout_description
+              =workout.description
+            %p
+              = list_exercises(workout)
+            %p.completion
+              - if workout.due_date < Date.today
+                = "Overdue: #{workout.due_date.to_formatted_s(:long_ordinal)}"
+              -else
+                = "Due: #{workout.due_date.to_formatted_s(:long_ordinal)}"
+            = link_to "View", workout_path(workout), class: "btn btn-primary btn-xs "
+      = paginate @outstanding_workouts, param_name: 'page_2'
 
   .col-md-6
     %h3
       Completed Workouts
-    %ul.workout_list
-      -@completed_workouts.each do |workout|
-        %li.completed
-          %p.admin_workout_description
-            = workout.description
-          %p
-            = list_exercises(workout)
-          %p.completion
-            = "Completed: #{workout.completion_date.to_formatted_s(:long_ordinal)}"
-          = link_to "View", workout_path(workout),  class: "btn btn-primary btn-xs "
-    = paginate @completed_workouts
+    -if @completed_workouts.blank?
+      %p.no_records No Records
+    -else
+      %ul.workout_list
+        -@completed_workouts.each do |workout|
+          %li.completed
+            %p.admin_workout_description
+              = workout.description
+            %p
+              = list_exercises(workout)
+            %p.completion
+              = "Completed: #{workout.completion_date.to_formatted_s(:long_ordinal)}"
+            = link_to "View", workout_path(workout),  class: "btn btn-primary btn-xs "
+      = paginate @completed_workouts
