--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -11,30 +11,37 @@
 .row
   .col-md-6
     %h3 Templates
-    %ul.workout_list
-      - @templates.each do |workout|
-        %li
-          %p.admin_workout_description
-            = "#{workout.description}: #{list_exercises(workout)}"
-          .links
-            = link_to 'View', workout,  class: "btn btn-primary btn-xs not_corner"
-            = link_to 'Edit', edit_workout_path(workout), class: "btn btn-default btn-xs not_corner"
-            = link_to 'Delete', workout, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs not_corner"
-            = link_to "Copy", duplicate_workout_path(workout), method: :post, class: "btn btn-warning btn-xs not_corner"
-    = paginate @templates
+    - if @templates.blank?
+      %p.no_records No Records
+    -else
+      %ul.workout_list
+        - @templates.each do |workout|
+          %li
+            %p.admin_workout_description
+              = "#{workout.description}: #{list_exercises(workout)}"
+            .links
+              = link_to 'View', workout,  class: "btn btn-primary btn-xs not_corner"
+              = link_to 'Edit', edit_workout_path(workout), class: "btn btn-default btn-xs not_corner"
+              = link_to 'Delete', workout, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs not_corner"
+              = link_to "Copy", duplicate_workout_path(workout), method: :post, class: "btn btn-warning btn-xs not_corner"
+      = paginate @templates
 
   .col-md-6
     %h3 Client Workouts
-    %ul.workout_list
-      - @workouts.each do |workout|
-        %li
-          %p.admin_workout_description
-            = "#{workout.description}: #{list_exercises(workout)}"
-          %p
-            = "Created for #{workout.user.full_name}, #{workout.created_at.to_formatted_s(:long_ordinal)}"
-          .links
-            = link_to 'View', workout, class: "btn btn-primary btn-xs not_corner"
-            = link_to 'Edit', edit_workout_path(workout),class: "btn btn-default btn-xs not_corner"
-            = link_to 'Delete', workout, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs not_corner"
-            = link_to "Copy", duplicate_workout_path(workout), method: :post, class: "btn btn-warning btn-xs not_corner"
-    = paginate @workouts, param_name: 'page_2'
+    - if @workouts.blank?
+      %p.no_records No Records
+    -else
+      %ul.workout_list
+        - @workouts.each do |workout|
+          %li
+            %p.admin_workout_description
+              = "#{workout.description}: #{list_exercises(workout)}"
+            %p
+              = "Created for #{workout.user.full_name}, #{workout.created_at.to_formatted_s(:long_ordinal)}"
+            .links
+              = link_to 'View', workout, class: "btn btn-primary btn-xs not_corner"
+              -unless workout.completed
+                = link_to 'Edit', edit_workout_path(workout),class: "btn btn-default btn-xs not_corner"
+              = link_to 'Delete', workout, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs not_corner"
+              = link_to "Copy", duplicate_workout_path(workout), method: :post, class: "btn btn-warning btn-xs not_corner"
+      = paginate @workouts, param_name: 'page_2'
