--- a/app/views/workouts/_fields.html.haml
+++ b/app/views/workouts/_fields.html.haml
@@ -2,33 +2,27 @@
   .set_box
     .field.exercise_adder
       = exercise_set_form.collection_select :exercise_id, Exercise.all, :id, :name, {include_blank: "Select Exercise"}, {class: "exercise_selector"}
-
-      = exercise_set_form.select(:set_type, ["Resistance", "Time Interval", "Distance"],  {include_blank: "Options"}, {class: "set_type_select"})
+      = exercise_set_form.link_to_remove 'Remove', class: "btn btn-danger btn-xs"
     .reps_and_rest
       .field
         = exercise_set_form.label :reps, "Reps:", class: "workout_creation_label"
-        = exercise_set_form.number_field :reps, class: "three_digit_entry"
+        = exercise_set_form.number_field :reps, class: "four_digit_entry"
       .field
         = exercise_set_form.label :rest_period, "Rest (secs):", class: "workout_creation_label"
-        = exercise_set_form.number_field :rest_period, class: "three_digit_entry"
-
-
-    %div{ class: ((exercise_set_form.object.set_type == "Time Interval" || exercise_set_form.object.set_type == "Distance") ? "visible cardio_fields" : "cardio_fields")}
-      %div{ class: (exercise_set_form.object.set_type == "Distance" ? "visible field distance" : "field distance")}
-        = exercise_set_form.label :distance, "Distance (m):", class: "workout_creation_label"
-        =exercise_set_form.number_field :distance, class: "four_digit_entry"
-      %div{ class: (exercise_set_form.object.set_type == "Time Interval" ? "visible field interval" : "field interval")}
-        =exercise_set_form.label :time, "Interval (secs):", class: "workout_creation_label"
-        =exercise_set_form.number_field :time, class: "four_digit_entry"
-    %div{ class: (exercise_set_form.object.set_type == "Resistance" ? "visible resistance_fields" : "resistance_fields")}
+        = exercise_set_form.number_field :rest_period, class: "four_digit_entry"
+    .option_fields
       .field
-        = exercise_set_form.select(:weight_required, [['Unweighted', false], ["Weighted",true]], {selected: "true"}, {class: "weight_selector"})
-      .weight_input_box.field
-        = exercise_set_form.label :suggested_weight, "Target (total kg)", class: "workout_creation_label"
-        =exercise_set_form.number_field :suggested_weight, step: 0.5, class: "four_digit_entry"
+        = exercise_set_form.label :distance, "Distance (m):", class: "workout_creation_label"
+        = exercise_set_form.number_field :distance, class: "four_digit_entry distance_entry"
+      .field
+        =exercise_set_form.label :time, "Interval (secs):", class: "workout_creation_label"
+        =exercise_set_form.number_field :time, class: "four_digit_entry interval_entry"
+      .field
+        = exercise_set_form.label :suggested_weight, "Weight (kg):", class: "workout_creation_label"
+        =exercise_set_form.number_field :suggested_weight, step: 0.5, class: "four_digit_entry weight_entry"
 
 
-    = exercise_set_form.link_to_remove 'Remove', class: "btn btn-danger btn-xs"
+
 = f.link_to_add 'Add a Set', :exercise_sets, class: "btn btn-success btn-lg full_width"
 
 
