--- a/app/views/workouts/_complete_fields.html.haml
+++ b/app/views/workouts/_complete_fields.html.haml
@@ -1,19 +1,21 @@
 = f.fields_for :exercise_sets do |exercise_set_form|
+  %h3.exercise_set_header
+    = exercise_set_heading(exercise_set_form.object)
+  -unless exercise_set_form.object.time.blank?
+    .interval_info
+      = "Interval: #{pluralize(exercise_set_form.object.time, 'sec')}"
+  -unless exercise_set_form.object.distance.blank?
+    .distance_info
+      = "Distance: #{pluralize(exercise_set_form.object.distance, 'metre')}"
+  -unless exercise_set_form.object.suggested_weight.blank?
+    .weight_info
+      ="Target Weight: #{pluralize(exercise_set_form.object.suggested_weight, 'kg')}"
+    .field.spacer
+      = exercise_set_form.label :achieved_weight, "Weight (kg):", class: "form_label weight_label"
+      =exercise_set_form.number_field :achieved_weight, min: 0, step: 0.5, class: "weight_entry"
 
-  -if exercise_set_form.object.exercise
-    %h4.exercise_set_header
-      = exercise_set_form.object.to_string
+  .field.spacer
+    =exercise_set_form.label :notes, "Notes:", class: "form_label notes_label"
+    =exercise_set_form.text_field :notes, class: "notes_entry"
 
-    -if (exercise_set_form.object.weight_required == true && exercise_set_form.object.set_type == "Resistance")
-      .field.complete_form
-        = exercise_set_form.label :achieved_weight, "Weight (kg):", class: "form_label"
-        =exercise_set_form.number_field :achieved_weight, min: 0, step: 0.5, class: "weight_entry"
-        -unless exercise_set_form.object.suggested_weight.blank?
-          ="target: #{exercise_set_form.object.suggested_weight}kg"
-    .field.complete_form
-      =exercise_set_form.label :notes, "Notes:", class: "form_label"
-      =exercise_set_form.text_field :notes, class: "notes_entry"
-
-  -else
-    %br
 
