--- a/app/views/workouts/_form.html.haml
+++ b/app/views/workouts/_form.html.haml
@@ -16,15 +16,15 @@
         .field.force_block
           = f.label :user_id, "Client:"
           = f.select(:user_id, User.all.map {|u| [u.full_name, u.id]},  {include_blank: "Template"})
-      .field.force_block
+      .field.force_block.workout_instuctions_container
         = f.label :description
         %br/
         = f.text_field :description
-      %div{ id: "due_date", class: "field force_block"}
+      %div{ id: "due_date", class: "field force_block workout_instructions_container"}
         = f.label :due_date
         %br/
         = f.text_field :due_date, class: "datepicker"
-      .field
+      .field.workout_instructions_container
         = f.label :instructions
         %br/
         =f.text_area :instructions, class: "workout_instructions"
