many refactoring changes

--- a/app/views/exercise_sets/edit.html.erb
+++ b/app/views/exercise_sets/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>Editing exercise_set</h1>
-
+<h3>
+    <%= exercise_set_heading(@exercise_set) %>
+</h3>
 <%= render 'form' %>
 
 <%= link_to 'Show', @exercise_set %> |
