loads more refactoring

--- a/app/assets/stylesheets/workouts.css.scss
+++ b/app/assets/stylesheets/workouts.css.scss
@@ -520,3 +520,15 @@ p.suggested_weight_text {
   width: 100%;
 }
 
+#exercise_set_notes {
+  width: 100%;
+}
+
+.weight_record_entry {
+  text-align: center;
+  margin-bottom: 0.3em
+}
+
+.weight_entry_add {
+  text-align: center;
+}
