--- a/app/assets/stylesheets/workouts.css.scss
+++ b/app/assets/stylesheets/workouts.css.scss
@@ -532,3 +532,8 @@ p.suggested_weight_text {
 .weight_entry_add {
   text-align: center;
 }
+
+p.notice {
+  display: block !important;
+  margin-bottom: 0;
+}
