--- a/app/views/workouts/_fields.html.haml
+++ b/app/views/workouts/_fields.html.haml
@@ -24,6 +24,6 @@
 
 
 
-= f.link_to_add 'Add a Set', :exercise_sets, class: "btn btn-success btn-lg full_width"
+= f.link_to_add '+ Activity', :exercise_sets, class: "btn btn-success btn-lg full_width"
 
 
