--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -38,7 +38,10 @@
             = set.notes
       -unless @workout.completed
         - if (@workout.user && @workout.user == current_user)
-          = link_to "+ Notes / Weights", edit_exercise_set_path(set), class: "btn btn-primary btn-xs"
+          -if set.reps.blank?
+            = link_to "+ Notes", edit_exercise_set_path(set), class: "btn btn-primary btn-xs"
+          -else
+            = link_to "+ Weights", edit_exercise_set_path(set), class: "btn btn-primary btn-xs"
 
   .col-md-5.button_center
     - if @workout.user
